Fix input names and layout issues.

--- a/exe/error-viewer-template/view.css
+++ b/exe/error-viewer-template/view.css
@@ -52,7 +52,12 @@ div {
 }
 
 #left-header {
+  display: flex;
+  align-items: center;
   width: 100%;
+  height: 2.5em;
+  min-height: 2.5em;
+  border-bottom: 1px solid black;
 }
 
 #file-pane {
@@ -60,18 +65,15 @@ div {
   flex: 1;
 }
 
-
-
-.thing-name {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+#file-name {
+  display: block;
+  flex: 1;
+  text-align: right;
   font-weight: bold;
   padding-left: 1em;
   padding-right: 1em;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
-  border-bottom: 1px solid black;
 }
 
 
@@ -174,16 +176,17 @@ div {
  * ---------------------------------------------------------------------- */
 
 #right-pane {
-  height:100%;
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  height:100%;
   overflow: auto;
 }
 
 #error-pane {
   border-bottom: 1px solid black;
-  padding: 1em;
-  padding-bottom: 1em;
-  height: 1.5em;
+  height: 2.5em;
+  min-height: 2.5em;
 }
 
 #stack-pane {
@@ -191,15 +194,17 @@ div {
   padding-left: 1em;
   padding: 1em;
   border-bottom: 1px solid black;
-  max-height: 30%;
-  overflow: scroll;
+  height: 65%;
+  resize: vertical;
+  overflow: auto;
 }
 
 #scope-pane {
   padding-top: 1em;
   padding-left: 1em;
-  max-height: 70%;
+  height: 30%;
   overflow: scroll;
+  flex: 1;
 }
 
 #value-pane {
